--- a/.github/workflows/ikuuu-checkin.yml
+++ b/.github/workflows/ikuuu-checkin.yml
@@ -15,18 +15,36 @@ jobs:
       uses: actions/checkout@v4
       
     - name: 设置 Python 环境
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.11'
+        cache: 'pip'  # 缓存 pip 依赖
         
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 urllib3
+        pip install -r requirements.txt
+        
+    - name: 验证依赖安装
+      run: |
+        echo "📦 已安装的包版本："
+        pip list | grep -E "requests|beautifulsoup4|brotli|urllib3"
         
     - name: 执行签到
       env:
         IKUUU_EMAIL: ${{ secrets.IKUUU_EMAIL }}
         IKUUU_PASSWORD: ${{ secrets.IKUUU_PASSWORD }}
         IKUUU_DOMAIN: ${{ secrets.IKUUU_DOMAIN }}  # 可选，不设置则使用默认域名
-      run: python main.py
+      run: |
+        echo "🚀 开始执行 IKUUU 自动签到..."
+        python main.py
+        
+    - name: 签到结果通知
+      if: always()
+      run: |
+        if [ $? -eq 0 ]; then
+          echo "✅ 签到成功！"
+        else
+          echo "❌ 签到失败，请查看日志"
+          exit 1
+        fi
